# FedESN-SmoothL1

./: .gitignore  FL_settings_l2.json  FL_settings_none.json  FL_settings_sl1.json  README.md  check.ipynb  client.py  config.py  data_loader.py  exp01.py  exp01_sgd_on_esn_states.py  exp02.py  exp03.py  exp03_01.py  exp03_02.py  exp03_03.py  exp04.py  exp04_01.py  exp05.py  funcs.py  gen_rounds_data.py  logger.py  main.py  methods.py  metrics.py  model.py  newton_solver.py  plot_ablation.py  plot_fl_clients.py  plot_lorenz.py  plot_paper_figs.py  plot_prune_compare.py  pruning.py  pyproject.toml  readout_node.py  requirements.txt  run_FL_exp.py  run_FL_exp_sl1.py  run_batch.sh  run_nohup.sh  (+25 more)
L1General_python/: L1General.py  L1General_sub.py  lossFuncs.py  minFunc.py  misc.py  objFunc.py
configs/: TSC_FL_settings_l2.json  TSC_FL_settings_none.json  TSC_FL_settings_sl1.json  TSC_settings_l2.json  TSC_settings_none.json  TSC_settings_sl1.json  TSR_settings_l1.json  TSR_settings_l2.json  TSR_settings_none.json  TSR_settings_sl1.json  datasets_tsc.json
matlab/: README.md  plot_all_sensitivity.m  plot_sensitivity.m
